--- a/src/components/Element/styles/element.scss
+++ b/src/components/Element/styles/element.scss
@@ -1,3 +1,5 @@
+@import 'styles/constants.scss';
+
 .element-header {
 	i {
 		opacity: 0.7;
@@ -14,7 +16,7 @@
 .element-content {
 	display: flex;
 	min-height: calc(100vh - 120px);
-	height: 100%;
+	height: calc(100vh - $nav-height);
 	max-width: 1200px;
 }
 
