--- a/src/components/ProductPage/styles/productpage.scss
+++ b/src/components/ProductPage/styles/productpage.scss
@@ -19,7 +19,7 @@
 	background-color: $background-color;
 	display: flex;
 	flex-direction: column;
-	margin-bottom: 60px;
+	padding-bottom: 60px;
 	flex: 1;
 
 	.process-basic-information-container {
