--- a/src/components/RecipeList/styles/recipe.scss
+++ b/src/components/RecipeList/styles/recipe.scss
@@ -45,3 +45,11 @@
 		display: flex;
 	}
 }
+
+.element-spinner {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
