Comment to explian min-width: 0;

--- a/src/components/OverflowSafeText/styles/overflowsafetext.scss
+++ b/src/components/OverflowSafeText/styles/overflowsafetext.scss
@@ -2,5 +2,5 @@
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
-	min-width: 0;
+	min-width: 0; // https://css-tricks.com/flexbox-truncated-text/
 }
