--- a/src/components/Products/styles/products.scss
+++ b/src/components/Products/styles/products.scss
@@ -1,5 +1,10 @@
 @import 'styles/constants.scss';
 
+div.product-filter {
+  margin-left: 36px;
+  max-width: 400px;
+}
+
 .products {
 	width: 100%;
 
