--- a/src/components/PaginatedTable/styles/paginatedtable.scss
+++ b/src/components/PaginatedTable/styles/paginatedtable.scss
@@ -1,5 +1,11 @@
 @import 'styles/constants.scss';
 
+.no-items {
+	color: $gray;
+	font-style: italic;
+	margin-left: 36px;
+}
+
 .paginated-table {
 
 	ul {
@@ -11,18 +17,19 @@
 	.pagination {
 		width: 100%;
 		font-size: 14px;
-		line-height: 60px;
-        display: flex;
+		line-height: 40px;
+    display: flex;
 		justify-content: space-between;
 		padding: 0 $object-list-right-padding 0 $object-list-left-padding;
 
-		.pagination-info {
-            font-weight: bold;
+		.pagination-count {
+      font-weight: bold;
 			color: $gray-dark;
+			margin-right: 8px;
 		}
 
 		.pagination-links {
-			color: $primary-light;
+			color: $primary;
 			display: flex;
 			align-items: center;
 
