--- a/src/components/Processes/styles/processes.scss
+++ b/src/components/Processes/styles/processes.scss
@@ -2,7 +2,11 @@
 
 .processes-container {
   width: calc(100vw);
+}
 
+div.process-filter {
+  margin-left: 36px;
+  max-width: 400px;
 }
 
 div.processes {
