Renamed Inventory2 to Inventory

--- a/src/components/Inventory/styles/inventory.scss
+++ b/src/components/Inventory/styles/inventory.scss
@@ -1,11 +1,11 @@
 @import 'styles/constants.scss';
 
-.inventory2-container {
+.inventory-container {
 	width: calc(100vw - #{$nav-width});
 	height: fit-content;
 }
 
-.inventory2-content {
+.inventory-content {
 	display: flex;
 	height: calc(100% - #{$section-header-height});
 
