fixed new product thing

--- a/src/components/Products/styles/products.scss
+++ b/src/components/Products/styles/products.scss
@@ -55,3 +55,22 @@ div.product-filter {
 
 }
 
+.recipe-content {
+	padding: 20px;
+}
+
+.recipe-content-text {
+	padding-bottom: 20px;
+}
+
+.recipe-content-header {
+	font-weight: bold;
+	padding-bottom: 24px;
+	font-size: 16px;
+}
+
+.learn-how {
+	text-decoration: underline;
+	font-size: 14px;
+	font-weight: bold;
+}
