new image added

--- a/src/components/Products/styles/products.scss
+++ b/src/components/Products/styles/products.scss
@@ -56,11 +56,12 @@ div.product-filter {
 }
 
 .recipe-content {
-	padding: 20px;
+	padding: 24px;
 }
 
 .recipe-content-text {
-	padding-bottom: 20px;
+	padding-top: 12px;
+	padding-bottom: 24px;
 }
 
 .recipe-content-header {
