--- a/src/components/Activity/styles/activity.scss
+++ b/src/components/Activity/styles/activity.scss
@@ -216,4 +216,11 @@ $z-index-edit-menu: 992;
   font-weight: bold;
 }
 
+.activity-page-forward {
+  vertical-align: middle
+}
+
+.activity-page-forward-i {
+  vertical-align: middle;
+}
 
