Adjust cursor when hovering header

--- a/src/components/Activity/styles/activitylist.scss
+++ b/src/components/Activity/styles/activitylist.scss
@@ -42,9 +42,13 @@
 	border-top-width: 0px;
 	border-bottom-width: 1px;
 	
-	& .activity-list-header>div {
-		margin-top: 12px;
-		margin-bottom: 12px;
-		font-size: 14px;
+	.activity-list-header {
+		cursor: default;
+		
+		&>div {
+			margin-top: 12px;
+			margin-bottom: 12px;
+			font-size: 14px;
+		}
 	}
 }
