--- a/src/components/Activity/styles/activity.scss
+++ b/src/components/Activity/styles/activity.scss
@@ -18,6 +18,7 @@ $z-index-edit-menu: 992;
 .activity {
   min-width: 700px;
   width: 100%;
+    background-color: white;
 
   .page.mini {
     flex-direction: column;
@@ -190,26 +191,21 @@ $z-index-edit-menu: 992;
     }
   }
 
-  .dates {
-    border-radius: 4px;
-    border: 1px solid rgba(0,0,0,0.1);
-  }
-  
-  // override PaginatedTable header border and text size
-  .paginated-table.border-none li.header .object-list-header {
-    border-top-width: 0px;
-    border-bottom-width: 1px;
-    
-    .activity-list-header {
-      cursor: default;
-      
-      &>div {
-        margin-top: 12px;
-        margin-bottom: 12px;
-        font-size: 14px;
-      }
+    // override PaginatedTable header border and text size
+    .paginated-table.border-none li.header .object-list-header {
+        border-top-width: 0px;
+        border-bottom-width: 1px;
+
+        .activity-list-header {
+            cursor: default;
+
+            & > div {
+                margin-top: 12px;
+                margin-bottom: 12px;
+                font-size: 14px;
+            }
+        }
     }
-  }
 }
 
 .activity-page-recipe-help {
