--- a/src/components/ObjectList/styles/objectlistitem.scss
+++ b/src/components/ObjectList/styles/objectlistitem.scss
@@ -7,6 +7,7 @@
     line-height: 40px;
     padding: 0 $object-list-right-padding 0 $object-list-left-padding;
     border-bottom: 1px solid $gray-ultra-light;
+    cursor: pointer;
     //box-shadow: $gray-ultra-light 0 2px 4px 0;
 
     &:hover {
