--- a/src/components/ProcessPage/styles/processeditform.scss
+++ b/src/components/ProcessPage/styles/processeditform.scss
@@ -1,4 +1,17 @@
 .edit-process-info {
+    .icon-picker-group {
+        display: flex;
+        .icon {
+            flex: 1;
+        }
+        
+        .button {
+            flex: 2;
+            //margin-right: 20px;
+        }
+    }
+    
+    
     .name-abbreviation {
         display: flex;
     }
