--- a/src/components/Card/styles/ButtonDropdown.scss
+++ b/src/components/Card/styles/ButtonDropdown.scss
@@ -28,6 +28,12 @@ div.button-dropdown {
 		&>div {
 			border-radius: 8px 0px 8px 8px;
 		}
+
+	}
+
+	&.left-align .button-dropdown-content {
+		right: inherit;
+		transform-origin: left top;
 	}
 
 	&.expanded {
