--- a/src/components/ObjectList/styles/objectlistheader.scss
+++ b/src/components/ObjectList/styles/objectlistheader.scss
@@ -2,12 +2,13 @@
 
 .object-list-header {
     display: flex;
+    height: 44px;
     width: 100%;
     padding: 0 $object-list-right-padding 0 $object-list-left-padding;
     margin-bottom: 6px;
     color: $gray-light;
     -webkit-font-smoothing: antialiased;
-    font-size: 12px;
+    font-size: 14px;
     border: 1px solid $gray-ultra-light;
     border-left: none;
     border-right: none;
