Don't display emojis which happen to have the same name as process icons :wave:

--- a/src/components/ProcessPage/styles/iconpicker.scss
+++ b/src/components/ProcessPage/styles/iconpicker.scss
@@ -3,10 +3,18 @@
 	
 	// Hides 1) the emoji-type navbar and focus footer which
 	// displayed the name and icon of what you were hovering.
-	// 2) The "Custom" category title
-	.emoji-mart > div.emoji-mart-bar, div.emoji-mart-category-label {
+	// 2) The "Custom" category title,
+	// 3) Emojis matching icon names
+	.emoji-mart > div.emoji-mart-bar, div.emoji-mart-category-label, span.emoji-mart-emoji {
 		display: none;
 	}
+	
+	// Since we're hiding emojis who have the same name as an icon
+	// we need to explicitly show icons ("custom" emojis)
+	span.emoji-mart-emoji-custom {
+		display: inline-block;
+	}
+	
 	
 	.picker-wrapper {
 		position: absolute;
