Move process icons to their own folder, prevent emoji name collission

--- a/src/components/ProcessPage/styles/iconpicker.scss
+++ b/src/components/ProcessPage/styles/iconpicker.scss
@@ -7,7 +7,7 @@
 	// displayed the name and icon of what you were hovering.
 	// 2) The "Custom" category title,
 	// 3) Emojis matching icon names
-	.emoji-mart > div.emoji-mart-bar, div.emoji-mart-category-label, span.emoji-mart-emoji {
+	.emoji-mart > div.emoji-mart-bar, div.emoji-mart-category-label {
 		display: none;
 	}
 	
