--- a/src/components/Goals/styles/goalbar.scss
+++ b/src/components/Goals/styles/goalbar.scss
@@ -50,7 +50,7 @@
 		
 		z-index: 902;
 		position: absolute;
-		right: 100px;
+		right: 70px;
 		top: -30px;
 		
 		background-color: $tooltip-background-color;
@@ -83,14 +83,18 @@
 			font-size:14px;
 			line-height: 16px;
 			letter-spacing: 5%;
-			text-transform: uppercase;
 			padding-top: 5px;
 			padding-bottom: 2px;
-			color: #828282;
+			color: $elephant-light;
 			vertical-align: middle;
 			
 			.blue {
-				color: $theme-color;
+				color: $primary-light;
+				//padding-right: 2px;
+			}
+			
+			.goal-amount {
+				//padding-left: 2px;
 			}
 		}
 	}
