--- a/src/components/Goals/styles/goalbar.scss
+++ b/src/components/Goals/styles/goalbar.scss
@@ -79,7 +79,7 @@
 		}
 		
 		
-		.goal-details-right {
+		.goal-hover-text {
 			font-size:14px;
 			line-height: 16px;
 			letter-spacing: 5%;
@@ -90,11 +90,6 @@
 			
 			.blue {
 				color: $primary-light;
-				//padding-right: 2px;
-			}
-			
-			.goal-amount {
-				//padding-left: 2px;
 			}
 		}
 	}
