Use query string to store selected process/product state

--- a/src/components/ProductionTrends/styles/productiontrends.scss
+++ b/src/components/ProductionTrends/styles/productiontrends.scss
@@ -1,8 +1,13 @@
 @import 'styles/constants.scss';
 
 .production-trends {
+    padding-top: 28px;
     margin-bottom: 80px;
     z-index: 0;
+
+    .options {
+
+    }
 
     .ant-select {
         width: 200px;
