--- a/src/components/Goals/styles/goalbar.scss
+++ b/src/components/Goals/styles/goalbar.scss
@@ -6,14 +6,20 @@
 	
 	.goal-interval {
 		flex: 3;
+		min-width: 48px;
+		font-size: 12px;
 		color: $elephant;
+	}
+	
+	&:hover .goal-interval {
+		color: $primary;
 	}
 	
 	.goal-whole-bar {
 		flex: 12;
 		
 		display: flex;
-		height: 8px;
+		height: 6px;
 		margin-top: 8px;
 		margin-bottom: 4px;
 		background-color: rgba(0,0,0,0.1);
@@ -50,18 +56,13 @@
 		
 		z-index: 902;
 		position: absolute;
-		right: 70px;
-		top: -30px;
+		right: -32px;
+		top: -20px;
+		min-width: 180px;
+		max-width: 180px;
 		
-		background-color: $tooltip-background-color;
-		color: $elephant-ultra-light;
-		border-radius: 2px;
-		padding-top: 4px;
-		padding-bottom: 4px;
-		padding-left: 14px;
-		padding-right: 14px;
-		box-shadow: rgba(0,0,0,0.3) 0 2px 12px;
-		-webkit-font-smoothing: antialiased;
+		text-align: center;
+		background-color: transparent;
 		
 		.title {
 			font-weight: bold;
@@ -86,7 +87,18 @@
 			padding-top: 5px;
 			padding-bottom: 2px;
 			color: $elephant-light;
+			background-color: $tooltip-background-color;
 			vertical-align: middle;
+			white-space: nowrap;
+			
+			//color: $elephant-ultra-light;
+			border-radius: 2px;
+			padding-top: 4px;
+			padding-bottom: 4px;
+			padding-left: 14px;
+			padding-right: 14px;
+			box-shadow: rgba(0,0,0,0.3) 0 2px 12px;
+			-webkit-font-smoothing: antialiased;
 			
 			.blue {
 				color: $primary-light;
